# Recognizer_automata

./: CMakeLists.txt
libs/list/: list.c  list.h
libs/symbol_table/: symbol_table.c  symbol_table.h
src/: main.cpp
