cmake_minimum_required(VERSION 3.5...4.0)
project(Symbol_table CXX C)
set(SOURCE src/main.cpp)
add_library(linked_list libs/list/list.c)
add_library(symbol_table libs/symbol_table/symbol_table.c)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(${PROJECT_NAME} ${SOURCE})
target_link_libraries(${PROJECT_NAME} linked_list symbol_table)